--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "parcel-bundler": "^1.10.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react": "16.7.0-alpha.0",
+    "react-dom": "16.7.0-alpha.0"
   }
 }
